<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/balanceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/my_balances"
            android:textStyle="bold"
            android:textAllCaps="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/balanceRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp" />

        <TextView
            android:id="@+id/currencyExchangeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:text="@string/currency_exchange"
            android:textAllCaps="true" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/circular_background"
                android:backgroundTint="@android:color/holo_red_dark"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_arrow_upward_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".12" />

            <TextView
                android:id="@+id/textViewSell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/sell"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sellContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:boxBackgroundMode="none"
                app:endIconDrawable="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:endIconMode="custom"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewSell"
                app:layout_constraintTop_toTopOf="parent"
                app:suffixText="EUR">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sellText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:padding="7dp"
                    android:textAlignment="viewEnd"
                    tools:text="0.00" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/circular_background"
                android:backgroundTint="@android:color/holo_green_dark"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_arrow_upward_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                android:rotation="180"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".12" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/received"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView1"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/receivedContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:boxBackgroundMode="none"
                app:endIconDrawable="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:endIconMode="custom"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                app:suffixText="EUR">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/receivedText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:enabled="false"
                    android:padding="7dp"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/holo_green_dark"
                    tools:text="+100.00" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@android:color/holo_blue_bright"
            app:cornerRadius="10dp"
            android:text="@string/submit"
            android:paddingVertical="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transactionsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>